change linked again

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
             </div>
             <div class="flex flex-col md:flex-row justify-center w-full gap-4">
                 <iframe
-                    src="https://clips.twitch.tv/embed?clip=ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX&parent=localhost&parent=kapesnikovacesta.fit"
+                    src="https://clips.twitch.tv/embed?clip=ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX&parent=www.example.com=kapesnikovacesta.fit"
                     height="378"
                     width="620"
                     allowfullscreen
