--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                     allowfullscreen
                     loading="lazy"
                     class="md:w-[620px] h-[378px]"
+                    preload="metadata"
                 >
                 </iframe>
                 <iframe
