second clip test

--- a/index.html
+++ b/index.html
@@ -156,12 +156,13 @@
                 >
                 </iframe>
                 <iframe
-                    src="https://www.twitch.tv/kapesnik69/clip/ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX?filter=clips&range=7d&sort=time"
+                    src="https://clips.twitch.tv/embed?clip=DaintyMushyTurnipTF2John-hRa0BFP4lE-5id-Z&parent=www.kapesnikovacesta.fit"
                     height="378"
                     width="620"
                     allowfullscreen
                     loading="lazy"
                     class="md:w-[620px] h-[378px]"
+                    preload="metadata"
                 >
                 </iframe>
             </div>
