--- a/index.html
+++ b/index.html
@@ -8,34 +8,78 @@
         <title>KAPESNIKOVA CESTA</title>
     </head>
     <body>
-        <div>
-            <div class="flex w-full justify-between items-center my-8 mx-4">
-                <h1 class="text-3xl font-bold uppercase text-center">
-                    kapesnikova cesta
-                </h1>
-                <div>
-                    <a href="https://www.twitch.tv/kapesnik69" target="_blank">
-                        <button
-                            type="button"
-                            class="cursor-pointer focus:outline-none text-white bg-purple-700 hover:bg-purple-800 focus:ring-4 focus:ring-purple-300 font-medium rounded-lg text-sm px-5 py-2.5 mb-2 dark:bg-purple-600 dark:hover:bg-purple-700 dark:focus:ring-purple-900"
-                        >
-                            Twitch
-                        </button>
-                    </a>
-                    <a
-                        href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
-                        target="_blank"
+        <nav class="" >
+            <div
+                class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+            >
+                <a
+                    href="https://flowbite.com/"
+                    class="flex items-center space-x-3 rtl:space-x-reverse"
+                >
+                    <img
+                        src="/kapesnik.png"
+                        class="h-8"
+                        alt="kapesnikovo logo"
+                    />
+                    <span
+                        class="self-center text-2xl uppercase font-semibold whitespace-nowrap text-black text-3xl"
+                        >kapesnikova cesta</span
                     >
-                        <button
-                            type="button"
-                            class="cursor-pointer text-white bg-gradient-to-r from-red-400 via-red-500 to-red-600 hover:bg-gradient-to-br focus:ring-4 focus:outline-none focus:ring-red-300 dark:focus:ring-red-800 font-medium rounded-lg text-sm px-5 py-2.5 text-center me-2 mb-2"
-                        >
-                            Youtube
-                        </button>
-                    </a>
+                </a>
+                <button
+                    data-collapse-toggle="navbar-default"
+                    type="button"
+                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400"
+                    aria-controls="navbar-default"
+                    aria-expanded="false"
+                >
+                    <span class="sr-only">Open main menu</span>
+                    <svg
+                        class="w-5 h-5"
+                        aria-hidden="true"
+                        xmlns="http://www.w3.org/2000/svg"
+                        fill="none"
+                        viewBox="0 0 17 14"
+                    >
+                        <path
+                            stroke="currentColor"
+                            stroke-linecap="round"
+                            stroke-linejoin="round"
+                            stroke-width="2"
+                            d="M1 1h15M1 7h15M1 13h15"
+                        />
+                    </svg>
+                </button>
+                <div
+                    class="hidden w-full md:block md:w-auto"
+                    id="navbar-default"
+                >
+                    <ul
+                        class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row"
+                    >
+                        <li>
+                            <a
+                                href="https://www.twitch.tv/kapesnik69"
+                                class="block py-2 px-3 text-black"
+                                aria-current="page"
+                                >Twitch</a
+                            >
+                        </li>
+                        <li>
+                            <a
+                                href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
+                                class="block py-2 px-3 text-black"
+                                >Youtube</a
+                            >
+                        </li>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="flex justify-center w-full mb-5">
+        </nav>
+
+        <div>
+            <div class="flex justify-center w-full mb-5 mt-5">
                 <div
                     class="relative overflow-x-auto shadow-md sm:rounded-lg w-lg lg:w-3xl"
                 >
@@ -66,8 +110,8 @@
                                     Den 1
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Ostrava</td>
+                                <td class="px-6 py-4 text-white">Landek Park</td>
                                 <td class="px-6 py-4 text-white">5 km</td>
                             </tr>
                             <tr
@@ -80,8 +124,8 @@
                                     Den 2
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Landek Park</td>
+                                <td class="px-6 py-4 text-white">Olze Kemp</td>
                                 <td class="px-6 py-4 text-white">6 km</td>
                             </tr>
                             <tr
@@ -94,8 +138,8 @@
                                     Den 3
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Olza Kemp</td>
+                                <td class="px-6 py-4 text-white">Hlučín</td>
                                 <td class="px-6 py-4 text-white">7 km</td>
                             </tr>
                             <tr
@@ -108,8 +152,8 @@
                                     Den 4
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Hlučín</td>
+                                <td class="px-6 py-4 text-white">Koběřice</td>
                                 <td class="px-6 py-4 text-white">5 km</td>
                             </tr>
                             <tr
@@ -122,8 +166,8 @@
                                     Den 5
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Koběřice</td>
+                                <td class="px-6 py-4 text-white">Hradec nad Moravicí</td>
                                 <td class="px-6 py-4 text-white">5 km</td>
                             </tr>
                             <tr
@@ -136,7 +180,7 @@
                                     Den 6
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Opava</td>
                                 <td class="px-6 py-4 text-white">Nevim</td>
                                 <td class="px-6 py-4 text-white">5 km</td>
                             </tr>
