--- a/index.html
+++ b/index.html
@@ -8,75 +8,30 @@
         <title>KAPESNIKOVA CESTA</title>
     </head>
     <body>
-        <nav class="" >
-            <div
-                class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
-            >
+        <div
+            class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
+        >
+            <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="/kapesnik.png" class="h-8" alt="kapesnikovo logo" />
+                <span
+                    class="self-center text-2xl uppercase font-semibold whitespace-nowrap text-black text-3xl"
+                    >kapesnikova cesta</span
+                >
+            </a>
+            <div class="flex">
                 <a
-                    href="https://flowbite.com/"
-                    class="flex items-center space-x-3 rtl:space-x-reverse"
+                    href="https://www.twitch.tv/kapesnik69"
+                    class="block py-2 px-3 text-black"
+                    aria-current="page"
+                    >Twitch</a
                 >
-                    <img
-                        src="/kapesnik.png"
-                        class="h-8"
-                        alt="kapesnikovo logo"
-                    />
-                    <span
-                        class="self-center text-2xl uppercase font-semibold whitespace-nowrap text-black text-3xl"
-                        >kapesnikova cesta</span
-                    >
-                </a>
-                <button
-                    data-collapse-toggle="navbar-default"
-                    type="button"
-                    class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400"
-                    aria-controls="navbar-default"
-                    aria-expanded="false"
+                <a
+                    ref="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
+                    class="block py-2 px-3 text-black"
+                    >Youtube</a
                 >
-                    <span class="sr-only">Open main menu</span>
-                    <svg
-                        class="w-5 h-5"
-                        aria-hidden="true"
-                        xmlns="http://www.w3.org/2000/svg"
-                        fill="none"
-                        viewBox="0 0 17 14"
-                    >
-                        <path
-                            stroke="currentColor"
-                            stroke-linecap="round"
-                            stroke-linejoin="round"
-                            stroke-width="2"
-                            d="M1 1h15M1 7h15M1 13h15"
-                        />
-                    </svg>
-                </button>
-                <div
-                    class="hidden w-full md:block md:w-auto"
-                    id="navbar-default"
-                >
-                    <ul
-                        class="font-medium flex flex-col p-4 md:p-0 mt-4 md:flex-row"
-                    >
-                        <li>
-                            <a
-                                href="https://www.twitch.tv/kapesnik69"
-                                class="block py-2 px-3 text-black"
-                                aria-current="page"
-                                >Twitch</a
-                            >
-                        </li>
-                        <li>
-                            <a
-                                href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
-                                class="block py-2 px-3 text-black"
-                                >Youtube</a
-                            >
-                        </li>
-                        </li>
-                    </ul>
-                </div>
             </div>
-        </nav>
+        </div>
 
         <div>
             <div class="flex justify-center w-full mb-5 mt-5">
@@ -111,7 +66,9 @@
                                 </th>
                                 <td class="px-1 py-4">❌</td>
                                 <td class="px-6 py-4 text-white">Ostrava</td>
-                                <td class="px-6 py-4 text-white">Landek Park</td>
+                                <td class="px-6 py-4 text-white">
+                                    Landek Park
+                                </td>
                                 <td class="px-6 py-4 text-white">5 km</td>
                             </tr>
                             <tr
@@ -124,7 +81,9 @@
                                     Den 2
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Landek Park</td>
+                                <td class="px-6 py-4 text-white">
+                                    Landek Park
+                                </td>
                                 <td class="px-6 py-4 text-white">Olze Kemp</td>
                                 <td class="px-6 py-4 text-white">6 km</td>
                             </tr>
@@ -167,7 +126,9 @@
                                 </th>
                                 <td class="px-1 py-4">❌</td>
                                 <td class="px-6 py-4 text-white">Koběřice</td>
-                                <td class="px-6 py-4 text-white">Hradec nad Moravicí</td>
+                                <td class="px-6 py-4 text-white">
+                                    Hradec nad Moravicí
+                                </td>
                                 <td class="px-6 py-4 text-white">5 km</td>
                             </tr>
                             <tr
