--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 
         <div>
             <div class="flex justify-center w-full mb-5 mt-5">
-                <div
-                    class="relative overflow-x-auto shadow-md sm:rounded-lg w-lg lg:w-3xl"
-                >
+                <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
                     <table
                         class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
                     >
