--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
 
         <div>
             <div class="flex justify-center w-full mb-5 mt-5">
-                <div class="relative overflow-x-auto shadow-md sm:rounded-lg">
+                <div
+                    class="relative overflow-x-auto sm:rounded-lg w-full max-w-5xl"
+                >
                     <table
                         class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400"
                     >
