navbar href youtube fix

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     >Twitch</a
                 >
                 <a
-                    ref="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
+                    href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
                     class="block py-2 px-3 text-black"
                     >Youtube</a
                 >
