bg color change

--- a/index.html
+++ b/index.html
@@ -7,27 +7,27 @@
         <link href="./src/style.css" rel="stylesheet" />
         <title>KAPESNIKOVA CESTA</title>
     </head>
-    <body>
+    <body class="bg-[#131313]">
         <div
             class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4"
         >
             <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse">
                 <img src="/kapesnik.png" class="h-8" alt="kapesnikovo logo" />
                 <span
-                    class="self-center text-2xl uppercase font-semibold whitespace-nowrap text-black text-3xl"
+                    class="self-center text-2xl uppercase font-semibold whitespace-nowrap text-white text-3xl"
                     >kapesnikova cesta</span
                 >
             </a>
             <div class="flex">
                 <a
                     href="https://www.twitch.tv/kapesnik69"
-                    class="block py-2 px-3 text-black"
+                    class="block py-2 px-3 text-white"
                     aria-current="page"
                     >Twitch</a
                 >
                 <a
                     href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
-                    class="block py-2 px-3 text-black"
+                    class="block py-2 px-3 text-white"
                     >Youtube</a
                 >
             </div>
