blank targets to navbar links

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <div class="flex">
                 <a
                     href="https://www.twitch.tv/kapesnik69"
+                    target="_blank"
                     class="block py-2 px-3 text-white"
                     aria-current="page"
                     >Twitch</a
@@ -28,6 +29,7 @@
                 <a
                     href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
                     class="block py-2 px-3 text-white"
+                    target="_blank"
                     >Youtube</a
                 >
             </div>
