--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
                     target="_blank"
                     class="block py-2 px-3 text-white"
                     aria-current="page"
+                    rel="noopener noreferrer"
                     >Twitch</a
                 >
                 <a
                     href="https://www.youtube.com/channel/UCrXzHh1wiJ7Nt3OF9H_knTA"
                     class="block py-2 px-3 text-white"
                     target="_blank"
+                    rel="noopener noreferrer"
                     >Youtube</a
                 >
             </div>
