--- a/index.html
+++ b/index.html
@@ -153,7 +153,9 @@
                     </table>
                 </div>
             </div>
-            <div class="flex flex-col md:flex-row justify-center w-full gap-4">
+            <div
+                class="grid grid-cols-1 md:grid-cols-2 justify-center w-full gap-4"
+            >
                 <iframe
                     src="https://clips.twitch.tv/embed?clip=ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX&parent=www.kapesnikovacesta.fit"
                     height="378"
@@ -166,6 +168,16 @@
                 </iframe>
                 <iframe
                     src="https://clips.twitch.tv/embed?clip=DaintyMushyTurnipTF2John-hRa0BFP4lE-5id-Z&parent=www.kapesnikovacesta.fit"
+                    height="378"
+                    width="620"
+                    allowfullscreen
+                    loading="lazy"
+                    class="md:w-[620px] h-[378px]"
+                    preload="metadata"
+                >
+                </iframe>
+                <iframe
+                    src="https://clips.twitch.tv/embed?clip=AgitatedFaintPandaBrainSlug-ytuGhaPcwU5Nf9Jb&parent=www.kapesnikovacesta.fit"
                     height="378"
                     width="620"
                     allowfullscreen
