autoplay property on twitch clips

--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
                     loading="lazy"
                     class="md:w-[620px] h-[378px]"
                     preload="metadata"
+                    autoplay="false"
                 >
                 </iframe>
                 <iframe
@@ -174,6 +175,7 @@
                     loading="lazy"
                     class="md:w-[620px] h-[378px]"
                     preload="metadata"
+                    autoplay="false"
                 >
                 </iframe>
                 <iframe
@@ -184,6 +186,7 @@
                     loading="lazy"
                     class="md:w-[620px] h-[378px]"
                     preload="metadata"
+                    autoplay="false"
                 >
                 </iframe>
             </div>
