fix display of iframes, added classes to fix the view

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 </div>
             </div>
             <div
-                class="grid grid-cols-1 md:grid-cols-2 justify-center w-full gap-4"
+                class="grid grid-cols-1 md:grid-cols-2 w-full max-w-6xl mx-auto gap-6"
             >
                 <iframe
                     src="https://clips.twitch.tv/embed?clip=ZanyBlueLorisBleedPurple-x6dTPRFibfagNYUX&parent=www.kapesnikovacesta.fit"
@@ -162,7 +162,7 @@
                     width="620"
                     allowfullscreen
                     loading="lazy"
-                    class="md:w-[620px] h-[378px]"
+                    class="block aspect-video rounded-md w-full"
                     preload="metadata"
                     autoplay="false"
                 >
@@ -173,7 +173,7 @@
                     width="620"
                     allowfullscreen
                     loading="lazy"
-                    class="md:w-[620px] h-[378px]"
+                    class="block aspect-video rounded-md w-full"
                     preload="metadata"
                     autoplay="false"
                 >
@@ -184,7 +184,7 @@
                     width="620"
                     allowfullscreen
                     loading="lazy"
-                    class="md:w-[620px] h-[378px]"
+                    class="block aspect-video rounded-md w-full"
                     preload="metadata"
                     autoplay="false"
                 >
