--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                                 <td class="px-6 py-4 text-white">
                                     Landek Park
                                 </td>
-                                <td class="px-6 py-4 text-white">5 km</td>
+                                <td class="px-6 py-4 text-white">11 km</td>
                             </tr>
                             <tr
                                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
@@ -89,10 +89,10 @@
                                     Landek Park
                                 </td>
                                 <td class="px-6 py-4 text-white">Olze Kemp</td>
-                                <td class="px-6 py-4 text-white">6 km</td>
+                                <td class="px-6 py-4 text-white">15.5 km</td>
                             </tr>
                             <tr
-                                class="bg-white dark:bg-gray-800 hover:bg-gray-50 dark:hover:bg-gray-600"
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
                             >
                                 <th
                                     scope="row"
@@ -103,7 +103,7 @@
                                 <td class="px-1 py-4">❌</td>
                                 <td class="px-6 py-4 text-white">Olza Kemp</td>
                                 <td class="px-6 py-4 text-white">Hlučín</td>
-                                <td class="px-6 py-4 text-white">7 km</td>
+                                <td class="px-6 py-4 text-white">25 km</td>
                             </tr>
                             <tr
                                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
@@ -117,7 +117,7 @@
                                 <td class="px-1 py-4">❌</td>
                                 <td class="px-6 py-4 text-white">Hlučín</td>
                                 <td class="px-6 py-4 text-white">Koběřice</td>
-                                <td class="px-6 py-4 text-white">5 km</td>
+                                <td class="px-6 py-4 text-white">31 km</td>
                             </tr>
                             <tr
                                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
@@ -133,7 +133,7 @@
                                 <td class="px-6 py-4 text-white">
                                     Hradec nad Moravicí
                                 </td>
-                                <td class="px-6 py-4 text-white">5 km</td>
+                                <td class="px-6 py-4 text-white">23 km</td>
                             </tr>
                             <tr
                                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
@@ -146,8 +146,50 @@
                                 </th>
                                 <td class="px-1 py-4">❌</td>
                                 <td class="px-6 py-4 text-white">Opava</td>
+                                <td class="px-6 py-4 text-white">TBA</td>
+                                <td class="px-6 py-4 text-white">? km</td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 7
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Opava</td>
                                 <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">5 km</td>
+                                <td class="px-6 py-4 text-white">? km</td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 8
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">Opava</td>
+                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">? km</td>
+                            </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 9
+                                </th>
+                                <td class="px-1 py-4">❌</td>
+                                <td class="px-6 py-4 text-white">TBA</td>
+                                <td class="px-6 py-4 text-white">TBA</td>
+                                <td class="px-6 py-4 text-white">? km</td>
                             </tr>
                         </tbody>
                     </table>
