--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                 </th>
                                 <td class="px-1 py-4">❌</td>
                                 <td class="px-6 py-4 text-white">Opava</td>
-                                <td class="px-6 py-4 text-white">TBA</td>
+                                <td class="px-6 py-4 text-white">Krnov</td>
                                 <td class="px-6 py-4 text-white">? km</td>
                             </tr>
                             <tr
@@ -159,8 +159,10 @@
                                     Den 7
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Opava</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
+                                <td class="px-6 py-4 text-white">Krnov</td>
+                                <td class="px-6 py-4 text-white">
+                                    Hlučín (auto)
+                                </td>
                                 <td class="px-6 py-4 text-white">? km</td>
                             </tr>
                             <tr
@@ -173,9 +175,11 @@
                                     Den 8
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">Opava</td>
-                                <td class="px-6 py-4 text-white">Nevim</td>
-                                <td class="px-6 py-4 text-white">? km</td>
+                                <td class="px-6 py-4 text-white">Hlučín</td>
+                                <td class="px-6 py-4 text-white">
+                                    Hlučín - mini golf
+                                </td>
+                                <td class="px-6 py-4 text-white">0 km</td>
                             </tr>
                             <tr
                                 class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
@@ -187,7 +191,7 @@
                                     Den 9
                                 </th>
                                 <td class="px-1 py-4">❌</td>
-                                <td class="px-6 py-4 text-white">TBA</td>
+                                <td class="px-6 py-4 text-white">Hlučín</td>
                                 <td class="px-6 py-4 text-white">TBA</td>
                                 <td class="px-6 py-4 text-white">? km</td>
                             </tr>
