--- a/index.html
+++ b/index.html
@@ -190,10 +190,10 @@
                                 >
                                     Den 9
                                 </th>
-                                <td class="px-1 py-4">❌</td>
+                                <td class="px-1 py-4">✅</td>
                                 <td class="px-6 py-4 text-white">Hlučín</td>
-                                <td class="px-6 py-4 text-white">TBA</td>
-                                <td class="px-6 py-4 text-white">? km</td>
+                                <td class="px-6 py-4 text-white">Hlučín</td>
+                                <td class="px-6 py-4 text-white">30+ km</td>
                             </tr>
                         </tbody>
                     </table>
