--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                                 <td class="px-1 py-4">✅</td>
                                 <td class="px-6 py-4 text-white">Hlučín</td>
                                 <td class="px-6 py-4 text-white">Hlučín</td>
-                                <td class="px-6 py-4 text-white">30+ km</td>
+                                <td class="px-6 py-4 text-white">31.5 km</td>
                             </tr>
                         </tbody>
                     </table>
