--- a/index.html
+++ b/index.html
@@ -195,6 +195,20 @@
                                 <td class="px-6 py-4 text-white">Hlučín</td>
                                 <td class="px-6 py-4 text-white">31.5 km</td>
                             </tr>
+                            <tr
+                                class="bg-white border-b dark:bg-gray-800 dark:border-gray-700 border-gray-200 hover:bg-gray-50 dark:hover:bg-gray-600"
+                            >
+                                <th
+                                    scope="row"
+                                    class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
+                                >
+                                    Den 10
+                                </th>
+                                <td class="px-1 py-4">✅</td>
+                                <td class="px-6 py-4 text-white">Hlučín</td>
+                                <td class="px-6 py-4 text-white">Poruba</td>
+                                <td class="px-6 py-4 text-white">34 km</td>
+                            </tr>
                         </tbody>
                     </table>
                 </div>
